[gd_scene load_steps=18 format=2]

[ext_resource path="res://Objects/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Tileset/hub_tileset.tres" type="TileSet" id=2]
[ext_resource path="res://Objects/Utilities/Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Kenney_Abstract_Platformer/PNG/Other/buttonGreen.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Kenney_Abstract_Platformer/PNG/Other/buttonGreen_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Kenney_Abstract_Platformer/PNG/Other/buttonRed_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Kenney_Abstract_Platformer/PNG/Other/buttonRed.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Kenney_Platform/PNG/Female/Poses/female_hold1.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Kenney_Platform/PNG/Female/Poses/female_hold2.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Kenney_Platform/PNG/Female/Poses/female_talk.png" type="Texture" id=10]
[ext_resource path="res://Scripts/LevelLogic/Trivia.gd" type="Script" id=11]
[ext_resource path="res://Assets/Fonts/consola.ttf" type="DynamicFontData" id=12]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="DynamicFont" id=5]
size = 42
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 12 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Trivia" type="Node2D"]
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1056.0
margin_top = -136.0
margin_right = 2152.0
margin_bottom = 1040.0
color = Color( 0.670588, 0.827451, 0.803922, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -1, 0 )
tile_set = ExtResource( 2 )
format = 1
tile_data = PoolIntArray( -14, 3, 0, -13, 3, 0, -12, 3, 0, -11, 3, 0, -10, 3, 0, -9, 3, 0, -8, 3, 0, -7, 3, 0, -6, 3, 0, -5, -1610612734, 0, -65521, -1073741819, 0, -65520, -1073741821, 0, -65519, -1073741821, 0, -65518, -1073741821, 0, -65517, -1073741821, 0, -65516, -1073741821, 0, -65515, -1073741821, 0, -65514, -1073741821, 0, -65513, -1073741821, 0, -65512, -1073741821, 0, -65511, -1073741821, 0, -65510, -1073741821, 0, -65509, -1073741821, 0, -65508, -1073741821, 0, -65507, -1073741821, 0, -65506, -1073741821, 0, -65505, -1073741821, 0, 65522, 3, 0, 65523, 3, 0, 65524, 3, 0, 65525, 3, 0, 65526, 3, 0, 65527, -1073741808, 0, 65528, 3, 0, 65529, 3, 0, 65530, 3, 0, 65531, -1610612732, 0, 15, -1073741820, 0, 16, 3, 0, 17, 3, 0, 18, 3, 0, 19, 3, 0, 20, 3, 0, 21, 3, 0, 22, 3, 0, 23, 3, 0, 24, 3, 0, 25, 3, 0, 26, 3, 0, 27, 3, 0, 28, 3, 0, 29, 3, 0, 30, 3, 0, 31, 3, 0, 131058, 3, 0, 131059, 3, 0, 131060, 3, 0, 131061, 3, 0, 131062, 3, 0, 131063, 3, 0, 131064, 3, 0, 131065, 3, 0, 131066, 3, 0, 131067, -1610612732, 0, 65551, -1073741820, 0, 65552, 3, 0, 65553, -1073741817, 0, 65554, 3, 0, 65555, 3, 0, 65556, 3, 0, 65557, 3, 0, 65558, 3, 0, 65559, 3, 0, 65560, 3, 0, 65561, 3, 0, 65562, 3, 0, 65563, 3, 0, 65564, 3, 0, 65565, 3, 0, 65566, 3, 0, 65567, 3, 0, 196594, 3, 0, 196595, 3, 0, 196596, 3, 0, 196597, 3, 0, 196598, 3, 0, 196599, 3, 0, 196600, 3, 0, 196601, 3, 0, 196602, 3, 0, 196603, -1610612732, 0, 131087, -1073741820, 0, 131088, 3, 0, 131089, 3, 0, 131090, 3, 0, 131091, 3, 0, 131092, 3, 0, 131093, 3, 0, 131094, 3, 0, 131095, 3, 0, 131096, 3, 0, 131097, 3, 0, 131098, 3, 0, 131099, -1073741817, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 262130, 3, 0, 262131, 3, 0, 262132, 3, 0, 262133, 3, 0, 262134, -1073741817, 0, 262135, 3, 0, 262136, 3, 0, 262137, 3, 0, 262138, 3, 0, 262139, -1610612732, 0, 196623, -1073741820, 0, 196624, 3, 0, 196625, 3, 0, 196626, 3, 0, 196627, 3, 0, 196628, 3, 0, 196629, 3, 0, 196630, 3, 0, 196631, 3, 0, 196632, 3, 0, 196633, 3, 0, 196634, 3, 0, 196635, 3, 0, 196636, 3, 0, 196637, 3, 0, 196638, 3, 0, 196639, 3, 0, 327666, 3, 0, 327667, 3, 0, 327668, 3, 0, 327669, 3, 0, 327670, 3, 0, 327671, 3, 0, 327672, 3, 0, 327673, -1073741808, 0, 327674, 3, 0, 327675, -1610612732, 0, 262159, -1073741820, 0, 262160, 3, 0, 262161, 3, 0, 262162, 3, 0, 262163, 3, 0, 262164, 3, 0, 262165, -1073741817, 0, 262166, 3, 0, 262167, 3, 0, 262168, 3, 0, 262169, 3, 0, 262170, 3, 0, 262171, 3, 0, 262172, 3, 0, 262173, 3, 0, 262174, 3, 0, 262175, 3, 0, 393202, 3, 0, 393203, 3, 0, 393204, 3, 0, 393205, 3, 0, 393206, 3, 0, 393207, 3, 0, 393208, 3, 0, 393209, 3, 0, 393210, 3, 0, 393211, -1610612732, 0, 327695, -1073741820, 0, 327696, 3, 0, 327697, -1073741808, 0, 327698, 3, 0, 327699, 3, 0, 327700, 3, 0, 327701, 3, 0, 327702, 3, 0, 327703, 3, 0, 327704, 3, 0, 327705, 3, 0, 327706, 3, 0, 327707, 3, 0, 327708, 3, 0, 327709, 3, 0, 327710, 3, 0, 327711, 3, 0, 458738, 3, 0, 458739, 3, 0, 458740, 3, 0, 458741, -1073741808, 0, 458742, 3, 0, 458743, 3, 0, 458744, 3, 0, 458745, 3, 0, 458746, 3, 0, 458747, -1610612732, 0, 393231, -1073741820, 0, 393232, 3, 0, 393233, 3, 0, 393234, 3, 0, 393235, -1073741817, 0, 393236, 3, 0, 393237, 3, 0, 393238, 3, 0, 393239, 3, 0, 393240, 3, 0, 393241, 3, 0, 393242, 3, 0, 393243, 3, 0, 393244, 3, 0, 393245, 3, 0, 393246, 3, 0, 393247, 3, 0, 524274, 3, 0, 524275, 3, 0, 524276, 3, 0, 524277, 3, 0, 524278, 3, 0, 524279, 3, 0, 524280, 3, 0, 524281, -1073741817, 0, 524282, 3, 0, 524283, -1610612732, 0, 458767, -1073741820, 0, 458768, 3, 0, 458769, 3, 0, 458770, 3, 0, 458771, 3, 0, 458772, 3, 0, 458773, 3, 0, 458774, 3, 0, 458775, 3, 0, 458776, 3, 0, 458777, 3, 0, 458778, -1073741817, 0, 458779, 3, 0, 458780, 3, 0, 458781, 3, 0, 458782, 3, 0, 458783, 3, 0, 589810, 3, 0, 589811, 3, 0, 589812, 3, 0, 589813, 3, 0, 589814, 3, 0, 589815, 3, 0, 589816, 3, 0, 589817, 3, 0, 589818, 3, 0, 589819, -1610612732, 0, 524303, -1073741820, 0, 524304, 3, 0, 524305, 3, 0, 524306, 3, 0, 524307, 3, 0, 524308, 3, 0, 524309, 3, 0, 524310, 3, 0, 524311, 3, 0, 524312, 3, 0, 524313, 3, 0, 524314, 3, 0, 524315, 3, 0, 524316, 3, 0, 524317, 3, 0, 524318, 3, 0, 524319, 3, 0, 655346, 3, 0, 655347, 3, 0, 655348, 3, 0, 655349, 3, 0, 655350, 3, 0, 655351, -1073741808, 0, 655352, 3, 0, 655353, 3, 0, 655354, 3, 0, 655355, -1610612719, 0, 655356, 4, 0, 655357, 4, 0, 655358, 4, 0, 655359, 4, 0, 589824, 4, 0, 589825, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 17, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 589843, 3, 0, 589844, 3, 0, 589845, 3, 0, 589846, 3, 0, 589847, 3, 0, 589848, 3, 0, 589849, 3, 0, 589850, 3, 0, 589851, 3, 0, 589852, 3, 0, 589853, 3, 0, 589854, 3, 0, 589855, 3, 0, 720882, 3, 0, 720883, 3, 0, 720884, 3, 0, 720885, -1073741817, 0, 720886, 3, 0, 720887, 3, 0, 720888, 3, 0, 720889, 3, 0, 720890, 3, 0, 720891, -1073741808, 0, 720892, 3, 0, 720893, 3, 0, 720894, 3, 0, 720895, 3, 0, 655360, 3, 0, 655361, 3, 0, 655362, -1073741808, 0, 655363, 3, 0, 655364, 3, 0, 655365, 3, 0, 655366, -1073741808, 0, 655367, 3, 0, 655368, 3, 0, 655369, 3, 0, 655370, 3, 0, 655371, 3, 0, 655372, 3, 0, 655373, -1073741808, 0, 655374, 3, 0, 655375, 3, 0, 655376, 3, 0, 655377, -1073741808, 0, 655378, 3, 0, 655379, 3, 0, 655380, 3, 0, 655381, 3, 0, 655382, 3, 0, 655383, 3, 0, 655384, 3, 0, 655385, 3, 0, 655386, 3, 0, 655387, 3, 0, 655388, 3, 0, 655389, 3, 0, 655390, 3, 0, 655391, 3, 0, 786418, 3, 0, 786419, 3, 0, 786420, 3, 0, 786421, 3, 0, 786422, 3, 0, 786423, 3, 0, 786424, 3, 0, 786425, 3, 0, 786426, 3, 0, 786427, 3, 0, 786428, 3, 0, 786429, 3, 0, 786430, -1073741817, 0, 786431, 3, 0, 720896, 3, 0, 720897, 3, 0, 720898, 3, 0, 720899, 3, 0, 720900, 3, 0, 720901, 3, 0, 720902, 3, 0, 720903, 3, 0, 720904, 3, 0, 720905, 3, 0, 720906, 3, 0, 720907, -1073741817, 0, 720908, 3, 0, 720909, 3, 0, 720910, 3, 0, 720911, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 720916, 3, 0, 720917, 3, 0, 720918, 3, 0, 720919, 3, 0, 720920, 3, 0, 720921, 3, 0, 720922, 3, 0, 720923, 3, 0, 720924, 3, 0, 720925, 3, 0, 720926, 3, 0, 720927, 3, 0, 851954, 3, 0, 851955, 3, 0, 851956, 3, 0, 851957, 3, 0, 851958, 3, 0, 851959, 3, 0, 851960, 3, 0, 851961, 3, 0, 851962, 3, 0, 851963, -1073741817, 0, 851964, 3, 0, 851965, 3, 0, 851966, 3, 0, 851967, 3, 0, 786432, -1073741808, 0, 786433, 3, 0, 786434, 3, 0, 786435, 3, 0, 786436, -1073741817, 0, 786437, 3, 0, 786438, 3, 0, 786439, 3, 0, 786440, 3, 0, 786441, -1073741808, 0, 786442, 3, 0, 786443, 3, 0, 786444, 3, 0, 786445, 3, 0, 786446, 3, 0, 786447, -1073741817, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 786453, 3, 0, 786454, 3, 0, 786455, 3, 0, 786456, 3, 0, 786457, -1073741817, 0, 786458, 3, 0, 786459, 3, 0, 786460, 3, 0, 786461, 3, 0, 786462, 3, 0, 786463, 3, 0, 917490, 3, 0, 917491, 3, 0, 917492, 3, 0, 917493, 3, 0, 917494, 3, 0, 917495, 3, 0, 917496, 3, 0, 917497, 3, 0, 917498, 3, 0, 917499, 3, 0, 917500, 3, 0, 917501, 3, 0, 917502, 3, 0, 917503, 3, 0, 851968, 3, 0, 851969, 3, 0, 851970, 3, 0, 851971, 3, 0, 851972, 3, 0, 851973, 3, 0, 851974, 3, 0, 851975, 3, 0, 851976, 3, 0, 851977, 3, 0, 851978, 3, 0, 851979, 3, 0, 851980, 3, 0, 851981, 3, 0, 851982, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 851989, 3, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="DiceDoor" parent="." instance=ExtResource( 3 )]
position = Vector2( 832, 480 )

[node name="NPC" type="Node2D" parent="."]

[node name="TalkingAnimation" type="AnimatedSprite" parent="NPC"]
position = Vector2( 0, 520 )
frames = SubResource( 4 )
playing = true
flip_h = true

[node name="SpeechBubble" type="ColorRect" parent="NPC"]
margin_left = -128.0
margin_top = 128.0
margin_right = 448.0
margin_bottom = 384.0

[node name="SpeechBubble2" type="ColorRect" parent="NPC"]
margin_top = 267.0
margin_right = 128.0
margin_bottom = 395.0
rect_rotation = 45.0

[node name="Question" type="Label" parent="NPC"]
margin_left = -112.0
margin_top = 144.0
margin_right = 432.0
margin_bottom = 304.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Which of the following measures of distance  is longer?"
align = 1
valign = 1
autowrap = true

[node name="AnswerGreen" type="Label" parent="NPC"]
margin_left = -112.0
margin_top = 304.0
margin_right = 152.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.286275, 0.705882, 0.494118, 1 )
custom_fonts/font = SubResource( 5 )
text = "mile"
align = 1
valign = 1
autowrap = true

[node name="AnswerGreen2" type="Label" parent="NPC"]
margin_left = 168.0
margin_top = 304.0
margin_right = 432.0
margin_bottom = 368.0
custom_colors/font_color = Color( 0.866667, 0.305882, 0.329412, 1 )
custom_fonts/font = SubResource( 5 )
text = "kilometre"
align = 1
valign = 1
autowrap = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( -168, 520 )

[node name="GreenButton" type="Area2D" parent="."]
position = Vector2( 288, 562 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="GreenButton"]
position = Vector2( 1, 0 )
frames = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="GreenButton"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="RedButton" type="Area2D" parent="."]
position = Vector2( 544, 562 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="RedButton"]
position = Vector2( 1, 0 )
frames = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RedButton"]
position = Vector2( 1, 0 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[connection signal="body_entered" from="GreenButton" to="." method="_on_GreenButton_body_entered"]
[connection signal="body_entered" from="RedButton" to="." method="_on_RedButton_body_entered"]
